Fixed z-index issue with header menu

--- a/public/styles/less/header/header-main.less
+++ b/public/styles/less/header/header-main.less
@@ -1,4 +1,5 @@
 .header{
+  z-index: 1000;
   height: 50px;  
   margin-bottom: 20px;
   position: sticky;
